--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,7 +1,3 @@
-/*!!!Attention!!!!*/
-/*ставил меньше отсчтупы и шрифты из-за размеров экрана ноутбука*/
-
-
 /* fonts*/
 @font-face {
     font-family: 'ProximaNova_Bold';
@@ -55,7 +51,7 @@ h2 {
 	font-size: inherit;
 	margin-bottom: 0rem;
 }
-button, input, a {
+button, input, a, textarea {
 	outline: none !important;
 }
 .button {
@@ -81,10 +77,22 @@ section {
 	padding: 4rem 0;
 }
 .section-header {
-	margin:2rem 0 6rem;
+&-light {
+	color:@light;
+	font-weight: 100;
+	}
+h2 {
 	.bold();
 	font-size: 2rem;
+}
+p {
+	margin-top: 3rem;
+	font-size:1.0rem;
+}
+	margin:2rem 0 6rem;
+	font-size: 2rem;
 	text-align: center;
+	font-weight: 900;
 }
 /* main */
 
@@ -217,6 +225,101 @@ section {
 	}
 }
 }
+
+/* Prices */
+
+.price {
+	background: @icon-color url(../img/prices/prices-bg.png) center;
+&-button {
+	margin-top: 2.5rem;
+	text-align: right;
+}
+&-block {
+	padding: 1rem 2rem;
+	min-height: 37rem;
+	text-align: center;
+	background:@light;
+	box-shadow: 7px 12px 21px 0px rgba(0, 0, 0, 0, 17);
+	margin-bottom: 1rem;
+}
+h4 {
+	font-size:1.1rem;
+	.bold();
+	margin: 2rem 0;
+}
+img {
+	width: 100%;
+	display: inline-block;
+	margin-bottom: 1rem;
+}
+&-list {
+	padding: 0;
+	margin-top: 1rem;
+	list-style: none;
+	min-height: 7rem;
+	font-size:1rem;
+	font-weight: 700;
+	line-height: 1.6;
+}
+li {
+	&:before {
+	  content:'';
+	  display: inline-block;
+	  width: 1.5rem;
+	  height: 1.5rem;
+	  margin-right: 0.5rem;
+	  background:url('../img/circle.png') no-repeat center;
+	  background-size: 1rem;
+	  vertical-align: bottom;
+	}
+}
+&-tag {
+	font-size: 1.1rem;
+	.bold();
+}
+}
+.popup {
+	display: none;
+	position:fixed;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 999;
+	background-color: rgba(0, 0, 0, 0.5);
+	&-content {
+		position: fixed;
+		left: 50%;
+		top: 10%;
+		background-color: @light;
+		transform: translateX(-50%);
+		padding: 2rem 3rem;
+		text-align: center;
+	}
+	&-form {
+		margin-top: 3rem;
+		padding: 0;
+			margin-bottom: 0rem;
+	}
+	&-header {
+		.bold();
+	}
+	&-close {
+		position: absolute;
+		top: -3.5rem;
+		right: -2rem;
+		width: 2rem;
+		text-align: center;
+		border:none;
+		background-color: transparent;
+		font-style: 3rem;
+		color:@light;
+		margin-top: 3rem;
+		padding: 0;
+	}
+}
 @media(min-width: 1200px) {
 	.main {
 		height: 100vh;
@@ -239,6 +342,20 @@ section {
 		margin-top: 1rem;
 		margin-bottom: 2rem;
 	}
+	.popupmodal {
+		margin-bottom: 0rem;
+	}
+	.price{
+	&-button {
+		text-align: center;
+		padding-bottom: 3rem;
+	}
+	}
+	.section {
+	&-header {
+		margin: 0;
+	}
+	}
 }
 @media(max-width: 767px) {
 	.main {
@@ -252,6 +369,11 @@ section {
 	    margin-top: 0rem;
 	    height: 3rem;
 }
+	.price{
+	&-block {
+		margin-bottom: 1rem;
+	}
+	}
 }
 @media(max-width:400px) {
 .header-content h1 {
