--- a/kvest/less/index.less
+++ b/kvest/less/index.less
@@ -27,10 +27,12 @@
 @text-size: 1.8rem;
 @text-size-p:1.4rem;
 @text-height: uppercase;
+@bg-light: #FFFFFF;
 
 /* basic settings */
 html {
 	font-style: 10px;
+	overflow-x: hidden;
 }
 main {
 	background-image: url(../img/main.png);
@@ -55,17 +57,22 @@ main {
 	width: auto;
 }
 
+.img-about {
+    top: 100%;
+    transform: translateY(-50%);
+}
+
 .modal-header .close {
 	margin: 0;
 	padding: 0;
 }
 
-	p {
+p {
 		font-family: @text-medium;
 		font-size: @text-size-p;
 		margin-bottom: 1rem;
 		text-transform: @text-height;
-	}
+}
 
 .about {
 	background-color: #FFFFFF;
@@ -84,8 +91,13 @@ main {
 
 .img-kvest {
 	margin-bottom: 5rem;
+	&-about{
+
+	}
 }
 .our-kvest {
+	background: @bg-light url('../img/shtrih.png') center no-repeat;
+	text-align: center;
 	margin-bottom: 5rem;
 	p {
 		margin-bottom: 2rem;
@@ -93,6 +105,28 @@ main {
 		text-align: center;
 		font-weight: 700;
 	}
+}
+
+/* Потому что мы можем */
+.what {
+	margin-bottom: 3rem;
+	&-treugolnik {
+		text-align: right;
+		margin-bottom: 5rem;
+		padding-right: 5rem;
+		padding-bottom: 5rem;
+	}
+	&-sunduk {
+		padding-top:5rem;
+	}
+}
+
+/*Контакты*/
+
+.contacts {
+	width: 100%;
+	text-align: left;
+	margin-bottom: 3rem;
 }
 
 @media (max-width: 991px) {
@@ -114,5 +148,13 @@ main {
 	}
 	.col-sm-12 {
 		text-align: center;
+	}
+	.contacts {
+		text-align: center;
+		margin-top: 1rem;
+		&-map {
+			margin-top: 2rem;
+			margin-bottom: 2rem;
+		}
 	}
 }
