--- a/hits/less/index.less
+++ b/hits/less/index.less
@@ -155,10 +155,10 @@ form {
     background-position: center center;
     background-size: cover;
 	&-one {
-	background-image: url(/img/group.png);
+	background-image: url(hit/img/group.png);
 	}
 	&-two {
-    background-image: url(/img/group2.png);
+    background-image: url(hit/img/group2.png);
     border-bottom: 8px solid @bottom-color;	
 	}
 }
