--- a/hits/less/index.less
+++ b/hits/less/index.less
@@ -155,10 +155,10 @@ form {
     background-position: center center;
     background-size: cover;
 	&-one {
-	background-image: url(https://creatads.github.io/hits/img/group.png);
+	background-image: url(/img/group.png);
 	}
 	&-two {
-    background-image: url(https://creatads.github.io/hits/img/group2.png);
+    background-image: url(/img/group2.png);
     border-bottom: 8px solid @bottom-color;	
 	}
 }
@@ -247,7 +247,10 @@ form {
 
 }
 @media(max-width: 991px) {
-
+.column, .columns {
+    padding-right: .9375rem;
+    padding-left: .9375rem;
+}
 }
 @media(max-width: 767px) {
 	 .wrapper {
@@ -266,6 +269,8 @@ form {
 	}
 	.advantage__title h1 {
 	font-size: revert;
+  border-right: none;
+  text-align: center;
 	}
 	form {
 		margin: 5px;
