--- a/hits/less/index.less
+++ b/hits/less/index.less
@@ -155,10 +155,10 @@ form {
     background-position: center center;
     background-size: cover;
 	&-one {
-	background-image: url(https://creatads.github.io/hits/img/group.png);
+	background-image: url(/img/group.png);
 	}
 	&-two {
-    background-image: url(https://creatads.github.io/hits/img/group2.png);
+    background-image: url(/img/group2.png);
     border-bottom: 8px solid @bottom-color;	
 	}
 }
@@ -244,15 +244,15 @@ form {
   }
 }
 @media(min-width: 1200px) {
-.column, .columns {
-    padding-right: .9375rem;
-    padding-left: .9375rem;
-}
+  .column, .columns {
+      padding-right: .9375rem;
+      padding-left: .9375rem;
+  }
 }
 @media(max-width: 991px) {
 }
 @media(max-width: 767px) {
-.wrapper {
+	 .wrapper {
     max-width: 100%;
     width: 100%;
     margin-left: auto;
@@ -260,7 +260,7 @@ form {
     margin-top: 50px;
     height: 315px;
 }
-.advantage__title-desk {
+	.advantage__title-desk {
     max-width: 100%;
     width: 100%;
     margin-left: auto;
