--- a/hits/less/index.less
+++ b/hits/less/index.less
@@ -248,11 +248,14 @@ form {
       padding-right: .9375rem;
       padding-left: .9375rem;
   }
+.form {
+margin^20px;
+	}
 }
 @media(max-width: 991px) {
 }
 @media(max-width: 767px) {
-	 .wrapper {
+.wrapper {
     max-width: 100%;
     width: 100%;
     margin-left: auto;
@@ -268,9 +271,9 @@ form {
 	}
 	.advantage__title h1 {
 	font-size: revert;
-  border-right: none;
-  text-align: center;
-	}
+	  border-right: none;
+	  text-align: center;
+		}
 	form {
 		margin: 5px;
 	}
