--- a/hits/less/index.less
+++ b/hits/less/index.less
@@ -249,7 +249,7 @@ form {
       padding-left: .9375rem;
   }
 .form {
-margin^20px;
+margin:2rem 0;
 	}
 }
 @media(max-width: 991px) {
@@ -263,7 +263,7 @@ margin^20px;
     margin-top: 50px;
     height: 315px;
 }
-	.advantage__title-desk {
+.advantage__title-desk {
     max-width: 100%;
     width: 100%;
     margin-left: auto;
