--- a/hits/less/index.less
+++ b/hits/less/index.less
@@ -155,10 +155,10 @@ form {
     background-position: center center;
     background-size: cover;
 	&-one {
-	background-image: url(https://creatads.github.io/hits/img/group.png);
+	background-image: url(/img/group.png);
 	}
 	&-two {
-    background-image: url(https://creatads.github.io/hits/img/group2.png);
+    background-image: url(/img/group2.png);
     border-bottom: 8px solid @bottom-color;	
 	}
 }
@@ -243,19 +243,19 @@ form {
     cursor: pointer;
   }
 }
-@media(min-width: 1200px) {
+@media(min-width: 1365px) {
   .column, .columns {
       padding-right: .9375rem;
       padding-left: .9375rem;
   }
-form {
-margin:2rem 0;
-	}
+  form {
+    margin: 2rem 0rem;
+  }
 }
 @media(max-width: 991px) {
 }
 @media(max-width: 767px) {
-.wrapper {
+	 .wrapper {
     max-width: 100%;
     width: 100%;
     margin-left: auto;
@@ -263,7 +263,7 @@ margin:2rem 0;
     margin-top: 50px;
     height: 315px;
 }
-.advantage__title-desk {
+	.advantage__title-desk {
     max-width: 100%;
     width: 100%;
     margin-left: auto;
@@ -271,9 +271,9 @@ margin:2rem 0;
 	}
 	.advantage__title h1 {
 	font-size: revert;
-	  border-right: none;
-	  text-align: center;
-		}
+  border-right: none;
+  text-align: center;
+	}
 	form {
 		margin: 5px;
 	}
