--- a/hits/less/index.less
+++ b/hits/less/index.less
@@ -155,7 +155,7 @@ form {
     background-position: center center;
     background-size: cover;
 	&-one {
-	background-image: url(https://creatads.github.io/hits/img/group2.png);
+	background-image: url(https://creatads.github.io/hits/img/group.png);
 	}
 	&-two {
     background-image: url(https://creatads.github.io/hits/img/group2.png);
