--- a/hits/less/index.less
+++ b/hits/less/index.less
@@ -249,7 +249,7 @@ form {
       padding-left: .9375rem;
   }
   form {
-    margin: 2rem 0rem;
+    margin: 5px;
   }
 }
 @media(max-width: 991px) {
