--- a/hits/less/index.less
+++ b/hits/less/index.less
@@ -87,8 +87,7 @@ form {
 	border: 4px solid #FFFFFF;
     border-radius: 40px;
     padding: 4rem;
-    margin-bottom: 3rem;
-    margin-top: -2.0rem;
+    margin: -2.0rem 0.5rem 3rem 0.5rem;
 }
 .form-control {
 	color: #000000;
@@ -236,7 +235,7 @@ form {
     background-repeat: no-repeat;
     display: block;
     position: absolute;
-    top: 50%;
+    top: 48%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 10;
@@ -247,9 +246,6 @@ form {
   .column, .columns {
       padding-right: .9375rem;
       padding-left: .9375rem;
-  }
-  form {
-    margin: 5px;
   }
 }
 @media(max-width: 991px) {
@@ -273,9 +269,6 @@ form {
 	font-size: revert;
   border-right: none;
   text-align: center;
-	}
-	form {
-		margin: 5px;
 	}
 }
 
